Hide bottom nav on mobile, fix dolly position on mobile.

--- a/src/style/overrides/_phone.scss
+++ b/src/style/overrides/_phone.scss
@@ -63,7 +63,8 @@
   }
 
   #navigation {
-    width: 90%;
+    display: none;
+    visibility: hidden;
   }
 
   #scene-users {
